fix para presetacion

--- a/ModuloInventario.ini
+++ b/ModuloInventario.ini
@@ -9,6 +9,6 @@ DEFAULT_LAYOUT = template_nofixed.html
 BODEGA_RESERVA = 105
 BODEGA_PRINCIPAL = 1
 BODEGA_TIENDA = 104
-SERVICE_URL = http://localhost:8000/ERPService?wsdl&b=4
-REPORT_URL = http://desktop-an6ui64:81/Reports/Pages/Report.aspx?ItemPath
-REPORT_SERVER_URL = http://desktop-an6ui64:81/ReportServer/Pages/ReportViewer.aspx
+SERVICE_URL = http://localhost:8000/ERPService?wsdl&m=7
+REPORT_URL = http://desktop-9bhlkba/Reports/report/
+REPORT_SERVER_URL = http://desktop-9bhlkba/ReportServer/Pages/ReportViewer.aspx
