--- a/ModuloInventario.ini
+++ b/ModuloInventario.ini
@@ -9,6 +9,6 @@ DEFAULT_LAYOUT = template_nofixed.html
 BODEGA_RESERVA = 105
 BODEGA_PRINCIPAL = 1
 BODEGA_TIENDA = 104
-SERVICE_URL = http://localhost:8000/ERPService?wsdl&m=7
+SERVICE_URL = http://localhost:8000/ERPService?wsdl&f=2
 REPORT_URL = http://desktop-9bhlkba/Reports/report/
 REPORT_SERVER_URL = http://desktop-9bhlkba/ReportServer/Pages/ReportViewer.aspx
